--- a/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
@@ -1,21 +1,29 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "Home Page";
 }
 
-@using (Html.BeginForm("Search", "Home", FormMethod.Post, new { id = "frmAction" }))
-{
-    <nav>
-        <div class="nav-wrapper">
-            <form>
-                <div class="input-field">
-                    <input id="search" type="search" required>
-                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                    <i class="material-icons">close</i>
-                </div>
-            </form>
-        </div>
-    </nav>
-}
+@model  GlobalEvents.Controllers.HomeController.HomeViewModel
+
+
+
+<div>
+   @using (Html.BeginForm("Search", "Home", FormMethod.Post))
+   {
+        <nav>
+            <div class="nav-wrapper">
+                <form id="searchForm">
+                    <div class="input-field">
+                        @Html.TextBoxFor(x => x.searchString, new { @type = "search", @id = "search"});
+                        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                        <i class="material-icons">close</i>
+                    </div>
+                </form>
+            </div>
+        </nav>
+    }
+</div>
+
 
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
@@ -58,7 +66,6 @@
     <div class="section">
     </div>
 </div>
-
 
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
