--- a/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
@@ -20,21 +20,22 @@
 
                 <div class="input-field">
                     <i class="material-icons prefix">label</i>
-                    @Html.EditorFor(model => model.NombreEvento, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.LabelFor(model => model.NombreEvento)
-                    @Html.ValidationMessageFor(model => model.NombreEvento, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.NombreEvento, new { htmlAttributes = new { @class = "form-control", @data_length = "200" } })
+                    @Html.LabelFor(model => model.NombreEvento, new { @data_error = "Error", @data_success = "" })
+                    @Html.ValidationMessageFor(model => model.NombreEvento, "", new { @class = "validate" })
                 </div>
 
                 <div class="input-field">
-                    <i class="material-icons prefix">description</i>
-                    @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.Descripcion, new { @class = "materialize-textarea", @data_length = "500" })
                     @Html.LabelFor(model => model.Descripcion)
-                    @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "validate" })
                 </div>
+
+                <script>$('#Descripcion').trigger('autoresize');</script>
 
                 <div class="input-field">
                     <i class="material-icons prefix">location_on</i>
-                    @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control", @data_length = "200" } })
                     @Html.LabelFor(model => model.Direccion)
                     @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
                 </div>
@@ -43,7 +44,7 @@
                     <div class="input-field col s6">
                         @Html.LabelFor(model => model.FechaInicio, htmlAttributes: new { @class = "active" })
                         @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "datepicker" } })
-                        @Html.ValidationMessageFor(model => model.FechaInicio, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.FechaInicio, "", new { @class = "validate" })
                     </div>
                     <div class="input-field col s6">
                         <input class="text-box single-line col-2" id="HoraInicio" name="HoraInicio" type="time" value="12:00" />
@@ -152,11 +153,12 @@
 
                 <br />
                 <label for="file">Imagen del evento: </label>
+                <br />
                 <input type="file" name="file" id="file" />
 
                 <br />
                 <br />
-                <div class="form-group">
+                <div class="form-group right-align">
                     <div class="col-md-offset-2 col-md-10 align-center">
                         <input type="submit" value="Crear" class="btn btn-primary" />
                     </div>
@@ -170,6 +172,6 @@
                     });</script>
         }
 
-        <div class="right-align">
+        <div class="left-align">
             @Html.ActionLink("Volver", "Index")
         </div>
