Modificación de respuesta validación token

--- a/GlobalEvents/GlobalEvents/Views/Home/VerifyAccount.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/VerifyAccount.cshtml
@@ -5,14 +5,20 @@
 
 @if (Model.Success)
 {
-    <h4>Gracias por verificar su cuenta.</h4>
+    <div class="card">
+        <div class="card-content">
+            <div class="card-title center-align">Gracias por verificar su cuenta</div>
+        </div>
+        <div class="card-action center-align">
+            <a href="~/Home/Login" class="green-text">Iniciar sesión</a>
+        </div>
+    </div>
 }
 else
 {
-    <h4>Hubo un error al verificar su cuenta, reintentelo nuevamente.</h4>
+    <div class="card">
+        <div class="card-content">
+            <div class="card-title center-align">Hubo un error al verificar su cuenta, reintentelo nuevamente.</div>
+        </div>
+    </div>
 }
-
-<div>
-    @Html.ActionLink("Ir al inicio", "Index", "Home") |
-    <a href="#" class="pull-right need-help">¿Necesita ayuda?</a><span class="clearfix"></span>
-</div>
