--- a/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Login.cshtml
@@ -44,15 +44,18 @@
                     })</script>
 
                 <br />
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10 align-center">
-                        <input type="submit" value="Ingresar" class="btn btn-primary" />
+
+                <div class="row">
+                    <div class="form-group">
+                        <div class="input-field col s6">
+                            <input type="submit" value="Ingresar" class="btn btn-primary" />
+                        </div>
+                    </div>
+                    <div class="input-field col s6 right-align">
+                        <input type="button" value="Crearse una cuenta" class="btn btn-primary blue" onclick="location.href='@Url.Action("Create", "Users")'" />
                     </div>
                 </div>
-
             </div>
         }
-
-        <div class="right-align">
-            @Html.ActionLink("Crearse una cuenta", "Create", "Users")
-        </div>
+    </div>
+</div>
