--- a/GlobalEvents/GlobalEvents/Views/Users/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Create.cshtml
@@ -19,14 +19,14 @@
                 </div>
 
                 <div class="input-field">
-                    <i class="material-icons prefix">label</i>
+                    <i class="material-icons prefix">vpn_key</i>
                     @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @data_length = "50" } })
                     @Html.LabelFor(model => model.Password, new { @data_error = "Error", @data_success = "" })
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "validate" })
                 </div>
 
                 <div class="input-field">
-                    <i class="material-icons prefix">label</i>
+                    <i class="material-icons prefix">vpn_key</i>
                     @Html.EditorFor(model => model.repeatPassword, new { htmlAttributes = new { @class = "form-control", @data_length = "50" } })
                     @Html.LabelFor(model => model.repeatPassword, new { @data_error = "Error", @data_success = "" })
                     @Html.ValidationMessageFor(model => model.repeatPassword, "", new { @class = "validate" })
